# passkeyd

./: .gitignore  CONTRIBUTIONS.md  Cargo.toml  PKGBUILD  README.md  passkeyd.conf  passkeyd.service  theme.conf
.github/workflows/: release.yml
passkeyd/: Cargo.toml
passkeyd-enroll/: Cargo.toml
passkeyd-enroll/src/: main.rs
passkeyd-manager/: Cargo.toml
passkeyd-manager/src/: list_state.rs  main.rs  tui.rs
passkeyd-select/: Cargo.toml
passkeyd-select/src/: authorize.rs  main.rs  select.rs
passkeyd-selection/: Cargo.toml
passkeyd-selection/src/: main.rs
passkeyd-share/: Cargo.toml
passkeyd-share/src/: component.rs  config.rs  lib.rs  theme.rs  utils.rs
passkeyd-share/src/database/: layout.rs  mod.rs
passkeyd/src/: config.rs  main.rs  utils.rs
passkeyd/src/cerds/: get.rs  make.rs  mgt.rs  mod.rs
passkeyd/src/ctaphid/: ctaphid.rs  mod.rs  utils.rs
passkeyd/src/ctaphid/hid/: mod.rs  vhid.rs
passkeyd/src/database/: layout.rs  mod.rs
passkeyd/src/tpm/: es256.rs  mod.rs  rs256.rs
