[workspace]
members = [
    "passkeyd",
    "passkeyd-share",
    "passkeyd-enroll",
    "passkeyd-select",
    ]
resolver = "3"

[workspace.dependencies]
ctap-types = { version = "0.4.0", features = ["std"] }
iced = { version = "0.14.0", features = ["image", "advanced"] }
serde = { version = "1.0.228", features=["derive"] }
bytes = { version ="1.11.0", features=["serde"]}
pam = "0.8.0"


[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
