[package]
name = "passkeyd-share"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes.workspace =true
serde.workspace = true
iced.workspace = true
ctap-types.workspace = true
toml = "1.0.3"
rand = "0.9.2"
log = "0.4.29"
env_logger = "0.11.8"
tss-esapi = "7.6.0"
thiserror = "2.0.18"
sha2 = "0.10.9"
hex="0.4.2"
ureq = "3.2.0"
pam.workspace = true
anyhow = "1.0.100"
